--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -30,8 +30,8 @@ if(role === 'Admin'){
           </h2>
         </div>
         <div class="col-auto <%= submitSchedule %>">
-          <a class="btn btn-primary px-5 myButton" href="/schedule/submit?rid=<%= rid %>"><i class="fa-solid fa-plus me-2"></i>
-            <div class="btn-content">Sign In</div>
+          <a class="btn btn-primary px-5 myButton" href="/schedule/submit?rid=<%= rid %>">
+            <div class="btn-content"><i class="fa-solid fa-plus me-2"></i> Add new schedule</div>
           </a>
         </div>
       </div>
