--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -281,12 +281,12 @@ if(role === 'Admin'){
         <div class=" col-12 mt-2">
           <hr>
           <div class="d-flex align-items-center mb-4">
-            <h3 class="text-1100 me-3">Notes</h3>
+            <h3 class="text-1100 me-3">Summary</h3>
             <button class="btn btn-link p-0" data-bs-toggle="modal" data-bs-target="#modalNotes">
               <span class="fa-solid fa-pen"></span>
             </button>
           </div>
-          <p class="text-800"><%= patrolReport.notes %></p>
+          <p class="text-500"><%= patrolReport.notes %></p>
         </div>
       </div>
     </div>
