--- a/views/duty-handover-details.ejs
+++ b/views/duty-handover-details.ejs
@@ -12,58 +12,63 @@ if(role === 'Admin' ){
 
 %>
 
-<div class="content px-0 pt-9">
-  <div class="row g-0">
-    <div class="col-12 col-xxl-12 px-0 bg-soft">
-      <div class="px-4 px-lg-6 pt-6 pb-9">
-        <!-- top header section -->
-        <div class="mb-5">
-          <nav class="mb-4" aria-label="breadcrumb">
-            <ol class="breadcrumb mb-0">
-              <li class="breadcrumb-item active">Duty Handover</li>
-              <li class="breadcrumb-item active">
-                <%= location %>
-              </li>
-              <li class="breadcrumb-item active">Details</li>
-            </ol>
-          </nav>
-          <div class="d-flex justify-content-between">
-            <h2 class="text-black fw-bolder mb-2">Duty Handover Details</h2>
-            <div class="font-sans-serif btn-reveal-trigger d-print-none">
-              <p class="badge badge-phoenix badge-phoenix-success">
-                <%= status %>
-              </p>
-              <button class="btn btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal" type="button" data-bs-toggle="dropdown" data-boundary="window" aria-haspopup="true" aria-expanded="false" data-bs-reference="parent">
-                <span class="fas fa-ellipsis-h"></span>
-              </button>
-              <div class="dropdown-menu dropdown-menu-end py-2">
-                <a class="dropdown-item" href="#!" id="printLink">Print</a>
-              </div>
-            </div>
-          </div>
-          <p class="text-700 lead mb-2">
-            Personnel submit patrol reports to document activities, incidents,
-            and safety concerns, ensuring accountability and security.
-          </p>
+<div class="content">
+  <!-- top header section -->
+  <div class="mb-5">
+    <nav class="mb-4" aria-label="breadcrumb">
+      <ol class="breadcrumb mb-0">
+        <li class="breadcrumb-item active">Duty Handover</li>
+        <li class="breadcrumb-item active">
+          <%= location %>
+        </li>
+        <li class="breadcrumb-item active">Details</li>
+      </ol>
+    </nav>
+    <div class="d-flex justify-content-between">
+      <h2 class="text-black fw-bolder mb-2">Duty Handover Details <span class="fw-normal text-700 ms-3">(<%= dutyHandover.date %>)</span></h2>
+      <div class="font-sans-serif btn-reveal-trigger d-print-none">
+        <p class="badge badge-phoenix badge-phoenix-success">
+          <%= status %>
+        </p>
+        <button class="btn btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal" type="button" data-bs-toggle="dropdown" data-boundary="window" aria-haspopup="true" aria-expanded="false" data-bs-reference="parent">
+          <span class="fas fa-ellipsis-h"></span>
+        </button>
+        <div class="dropdown-menu dropdown-menu-end py-2">
+          <a class="dropdown-item" href="#!" id="printLink">Print</a>
         </div>
+      </div>
+    </div>
+    <p class="text-700 lead mb-2">
+      Personnel submit patrol reports to document activities, incidents,
+      and safety concerns, ensuring accountability and security.
+    </p>
+  </div>
+
+  <div class="row">
+    <div class="col-12 col-xxl-9 px-0 bg-soft">
+      <div class="px-2 px-lg-2 pt-6 pb-9">
 
         <!-- body section -->
         <div class="row gx-0 gx-sm-5 gy-8 mb-n5">
-          <div class="col-12 col-xxl-7 col-xl-6 pe-xl-0 mx-xxl-auto">
-            <div class="card theme-wizard mb-5" data-theme-wizard="data-theme-wizard">
-              <div class="card-header bg-100 pt-3 pb-2 border-bottom-0">
+          <div class="col-12">
+            <div class="card theme-wizard mb-5" data-theme-wizard="data-theme-wizard" id="progress">
+              <div class="card-header bg-100 pt-3 pb-2 border-bottom-0 d-print-none">
                 <ul class="nav justify-content-between nav-wizard" role="tablist">
                   <li class="nav-item">
                     <a class="nav-link <%= showTabPane1 %> fw-semi-bold" href="#bootstrap-wizard-tab1" data-bs-toggle="tab" data-wizard-step="1">
                       <div class="text-center d-inline-block">
-                        <span class="nav-item-circle-parent"><span class="nav-item-circle"><span class="fas fa-thumbs-up"></span></span></span><span class="d-none d-md-block mt-1 fs--1">Handover</span>
+                        <span class="nav-item-circle-parent"><span class="nav-item-circle"><span class="fas fa-thumbs-up"></span></span></span>
+                        <span class="d-none d-md-block mt-1 fs--1">Handover</span>
+                        <span class="fs--1">(<%= giveShift %>)</span>
                       </div>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link <%= showTabPane2 %> fw-semi-bold" href="#bootstrap-wizard-tab2" data-bs-toggle="tab" data-wizard-step="2">
                       <div class="text-center d-inline-block">
-                        <span class="nav-item-circle-parent"><span class="nav-item-circle"><span class="fas fa-handshake-simple"></span></span></span><span class="d-none d-md-block mt-1 fs--1">Received</span>
+                        <span class="nav-item-circle-parent"><span class="nav-item-circle"><span class="fas fa-handshake-simple"></span></span></span>
+                        <span class="d-none d-md-block mt-1 fs--1">Received</span>
+                        <span class="fs--1">(<%= receiveShift %>)</span>
                       </div>
                     </a>
                   </li>
@@ -150,59 +155,8 @@ if(role === 'Admin' ){
                   <div class="tab-pane <%= showTabPane2 %>" role="tabpanel" aria-labelledby="bootstrap-wizard-tab2" id="bootstrap-wizard-tab2">
                     <form class="row g-3 has-validation" action="/duty-handover/details" method="post" id="reportForm">
                       <!-- form title report -->
-                      <div class="col-md-4">
-                        <label class="form-label" for="validationCustom04">Shift</label>
 
-                        <select class="form-select" id="validationCustom04" name="shift">
-                          <option selected="" value="<%= handoverShift %>">
-                            <%= handoverShift %>
-                          </option>
-                          <option value="Shift A">Shift A</option>
-                          <option value="Shift B">Shift B</option>
-                          <option value="Shift C">Shift C</option>
-                        </select>
-                        <div class="valid-feedback">Looks good!</div>
-                        <div class="invalid-feedback">
-                          Please select a shift.
-                        </div>
-                      </div>
-
-                      <div class="col-md-4">
-                        <label class="form-label" for="datepicker1">Date</label>
-
-                        <input class="form-control datetimepicker flatpickr-input" id="datepicker1" type="text" placeholder="day/month/year" data-options='{"dateFormat":"d/m/y","disableMobile":true,"allowInput":true}' name="date" value="<%= date %>" />
-                        <div class="valid-feedback">Looks good!</div>
-                        <div class="invalid-feedback">
-                          Please select a date here.
-                        </div>
-                      </div>
-
-                      <div class="col-md-4">
-                        <label class="form-label" for="validationCustom05">Location</label>
-
-                        <select class="form-select" id="validationCustom05" name="location">
-                          <option selected="" value="<%= location %>">
-                            <%= location %>
-                          </option>
-                          <option value="Baitul Makmur I">
-                            Baitul Makmur I
-                          </option>
-                          <option value="Baitul Makmur II">
-                            Baitul Makmur II
-                          </option>
-                          <option value="Jamek Mosque">Jamek Mosque</option>
-                          <option value="City Mosque">City Mosque</option>
-                          <option value="Raudhatul Sakinah">
-                            Raudhatul Sakinah
-                          </option>
-                        </select>
-                        <div class="valid-feedback">Looks good!</div>
-                        <div class="invalid-feedback">
-                          Please select a title report.
-                        </div>
-                      </div>
-
-                      <div class="col-md-4">
+                      <div class="col-md-6">
                         <label class="form-label" for="validationCustom03">Head of Shift</label>
 
                         <input class="form-control <%= validationHeadShift %>" id="validationCustom03" type="text" name="headShift" value="<%= headShift %>" />
@@ -211,24 +165,7 @@ if(role === 'Admin' ){
                         </div>
                       </div>
 
-                      <div class="col-md-4">
-                        <label class="form-label" for="validationCustom04">Handover shift received from</label>
-
-                        <select class="form-select" id="validationCustom04" name="handoverShift">
-                          <option selected="" value="<%= shift %>">
-                            <%= shift %>
-                          </option>
-                          <option value="Shift A">Shift A</option>
-                          <option value="Shift B">Shift B</option>
-                          <option value="Shift C">Shift C</option>
-                        </select>
-                        <div class="valid-feedback">Looks good!</div>
-                        <div class="invalid-feedback">
-                          Please select a shift.
-                        </div>
-                      </div>
-
-                      <div class="col-md-4">
+                      <div class="col-md-6 mb-3">
                         <label class="form-label" for="validationCustom03">Staff absent</label>
 
                         <input class="form-control <%= validationStaffAbsent %>" id="validationCustom03" type="text" name="staffAbsent" value="<%= staffAbsent %>" />
@@ -237,22 +174,12 @@ if(role === 'Admin' ){
                         </div>
                       </div>
 
-                      <div class="col-12 gy-4 mb-3">
-                        <label class="form-label" for="floatingProjectDescription2">Notes</label>
-                        <textarea class="form-control <%= validationNotes %> scrollbar-overlay" id="floatingProjectDescription2" placeholder="Leave a note here" style="height: 64px" name="notes">
-<%= notes %></textarea>
-                        <div class="valid-feedback">Looks good!</div>
-                        <div class="invalid-feedback">
-                          Please enter a note here.
-                        </div>
-                      </div>
-
                       <div class="col-md-12 mt-0 mb-0">
                         <h4 class="form-label">Shift Member For Patrol Location</h4>
                         <div id="selectedNames" class="d-flex flex-wrap border border-300 rounded-3 px-2" style="min-height: 2.5rem"></div>
                       </div>
 
-                      <div class="col-md-12">
+                      <div class="col-md-12 mt-3">
                         <div class="row">
                           <div class="col-4">
                             <label class="form-label" for="validationCustom03">Search Staff Name</label>
@@ -338,7 +265,7 @@ if(role === 'Admin' ){
                           <%= giveLog %>
                         </p>
                       </div>
-                      <h3 class="text-1100 mt-2 mb-3">Receive</h3>
+                      <h3 class="text-1100 mt-2 mb-3">Receive <span class="fw-normal text-700 fs-1">at (<%= dutyHandover.receive.time %>HRS)</span></h3>
                       <div class="col-12 mb-2">
                         <label class="form-label text-primary-300" for="staffonduty">Staff On Duty</label>
                         <div id="giveShiftMemberDisplay" class="d-flex row g-1">
@@ -387,17 +314,33 @@ if(role === 'Admin' ){
           <hr>
 
           <div class="mt-3 col-12 col-xxl-8">
-            <div class="d-flex align-items-center mb-2">
-              <h4 class="me-3">Notes</h4>
+            <div class="d-flex align-items-center mb-2" id="summary">
+              <h4 class="me-3">Summary</h4>
               <button class="btn btn-link p-0" data-bs-toggle="modal" data-bs-target="#modalNotes">
                 <span class="fa-solid fa-pen"></span>
               </button>
             </div>
-            <p class="text-1000">
+            <p class="text-500">
               <%= notes %>
             </p>
           </div>
         </div>
+      </div>
+    </div>
+
+    <!-- page nav -->
+    <div class="col-12 col-xl-3 d-print-none">
+      <div class="position-sticky mt-xxl-8" style="top: 80px">
+        <h5 class="lh-1">On this page</h5>
+        <hr class="text-300" />
+        <ul class="nav nav-vertical flex-column doc-nav" data-doc-nav="data-doc-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#progress">Duty Handover Progress</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#summary">Summary</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
@@ -424,7 +367,7 @@ if(role === 'Admin' ){
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="verticallyCenteredModalLabel">Notes</h5>
+        <h5 class="modal-title" id="verticallyCenteredModalLabel">Summary</h5>
         <button class="btn p-1" type="button" data-bs-dismiss="modal" aria-label="Close">
           <span class="fas fa-times fs--1"></span>
         </button>
