--- a/views/patrol-unit-details.ejs
+++ b/views/patrol-unit-details.ejs
@@ -157,12 +157,12 @@ if(role === 'Admin'){
         <hr />
         <div class="mt-0">
           <div class="d-flex align-items-center mb-4">
-            <h3 class="text-1100 me-3">Notes</h3>
+            <h3 class="text-1100 me-3">Summary</h3>
             <button class="btn btn-link p-0" data-bs-toggle="modal" data-bs-target="#modalNotes">
               <span class="fa-solid fa-pen"></span>
             </button>
           </div>
-          <p class="text-800">
+          <p class="text-500">
             <%= patrolReport.notes %>
           </p>
         </div>
