--- a/views/duty-handover-view.ejs
+++ b/views/duty-handover-view.ejs
@@ -6,8 +6,10 @@ var submitDutyHandover = "";
 
 if(role === 'Admin'){
     submitDutyHandover = "d-none";
+    deleteDutyHandover = "";
 }else {
     submitDutyHandover = "";
+    deleteDutyHandover = "d-none";
 }
 
 %>
@@ -122,8 +124,8 @@ if(role === 'Admin'){
                   </button>
                   <div class="dropdown-menu dropdown-menu-end py-2">
                     <a class="dropdown-item" href="/duty-handover/details?id=<%= dutyHandover.reportId %>">View</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-danger" href="#!">Remove</a>
+                    <div class="dropdown-divider <%= deleteDutyHandover %>"></div>
+                    <a class="dropdown-item text-danger <%= deleteDutyHandover %>" href="/delete/duty-handover/<%= dutyHandover.reportId %>">Remove</a>
                   </div>
                 </div>
               </td>
