--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,35 +6,21 @@
     <div class="col-12 col-xl-8">
       <div class="pb-5">
         <div class="card mb-1">
-          <div
-            class="card-header hover-actions-trigger d-flex justify-content-center align-items-end position-relative mb-7 mb-xxl-0"
-            style="min-height: 214px"
-          >
-            <div
-              class="bg-holder rounded-top"
-              style="
+          <div class="card-header hover-actions-trigger d-flex justify-content-center align-items-end position-relative mb-7 mb-xxl-0" style="min-height: 214px">
+            <div class="bg-holder rounded-top" style="
                 background-image: url(../../assets/img/generic/cover-photo.png);
-              "
-            ></div>
+              "></div>
             <!--/.bg-holder-->
 
             <% if(currentProfile === ''){ currentProfile =
             '/assets/img/team/avatar.webp'; } %>
 
             <div class="feed-profile" style="width: 150px; height: 150px">
-              <div
-                class="position-relative bg-400 rounded-circle cursor-pointer d-flex flex-center mb-xxl-7"
-              >
+              <div class="position-relative bg-400 rounded-circle cursor-pointer d-flex flex-center mb-xxl-7">
                 <div class="avatar avatar-5xl">
-                  <img
-                    class="rounded-circle rounded-circle bg-white img-thumbnail shadow-sm"
-                    src="<%= currentProfile %>"
-                  />
+                  <img class="rounded-circle rounded-circle bg-white img-thumbnail shadow-sm" src="<%= currentProfile %>" />
                 </div>
-                <label
-                  class="w-100 h-100 position-absolute z-index-1"
-                  for="upload-porfile-picture"
-                ></label>
+                <label class="w-100 h-100 position-absolute z-index-1" for="upload-porfile-picture"></label>
               </div>
             </div>
           </div>
@@ -45,9 +31,7 @@
               </div>
               <div class="col-auto">
                 <div class="d-flex mb-3 justify-content-between">
-                  <span
-                    class="fw-semi-bold fs--1 text-1100 badge badge-phoenix badge-phoenix-primary ms-auto"
-                  >
+                  <span class="fw-semi-bold fs--1 text-1100 badge badge-phoenix badge-phoenix-primary ms-auto">
                     PB<%= currentUser %>
                   </span>
                 </div>
@@ -59,9 +43,7 @@
               <div class="col-auto mx-auto">
                 <div class="row g-2">
                   <div class="col-auto order-xxl-1">
-                    <a
-                      class="btn btn-phoenix-primary lh-1 bg-transparent border border-0"
-                    >
+                    <a class="btn btn-phoenix-primary lh-1 bg-transparent border border-0">
                       <span class="fa-solid fa-plus me-2"></span>Total Report
                       (<%= amountTotalReports %>)
                     </a>
@@ -89,11 +71,8 @@
     <div class="col-12 col-xl-4">
       <div class="row gx-xl-8 gx-xxl-11">
         <h3 class="mb-4 text-center">Activity Timeline</h3>
-        
-        <div
-          class="col-xl-12 overflow-auto scrollbar-overlay"
-          style="height: 80vh"
-        >
+
+        <div class="col-xl-12 overflow-auto scrollbar-overlay" style="height: 80vh">
           <% if (Array.isArray(activity) && activity.length > 0) { %> <%
           activity.forEach((activity, activityIndex) => { %> <% if (todayDate
           === activity.date) { %>
@@ -115,33 +94,25 @@
                   <div class="timeline-item-bar position-relative">
                     <div class="icon-item icon-item-md rounded-7 border">
                       <% if(itemArray.type === 'Patrol Report') {%>
-                      <span
-                        class="fa-solid fa-clipboard text-success fs--1"
-                      ></span>
+                      <span class="fa-solid fa-clipboard text-success fs--1"></span>
                       <% } else %> <% if(itemArray.type === 'Case Report') {%>
-                      <span
-                        class="fa-solid fa-suitcase text-danger fs--1"
-                      ></span>
+                      <span class="fa-solid fa-suitcase text-danger fs--1"></span>
                       <%} else%> <% if(itemArray.type === 'Schedule') {%>
                       <span class="fa-solid fa-calendar text-info fs--1"></span>
                       <%}else %> <% if(itemArray.type === 'Upload Files') {%>
-                      <span
-                        class="fa-solid fa-file-arrow-up text-warning fs--1"
-                      ></span>
+                      <span class="fa-solid fa-file-arrow-up text-warning fs--1"></span>
                       <%}else %> <% if(itemArray.type === 'Upload Profile') {%>
                       <span class="fa-solid fa-user text-danger fs--1"></span>
                       <% }else %> <% if(itemArray.type === 'Duty Handover') {%>
-                        <span class="fa-solid fa-rocket text-success fs--1"></span>
+                      <span class="fa-solid fa-rocket text-success fs--1"></span>
                       <% } %>
                     </div>
                     <% if ( lastItemIndex >= 0 &&
                     activity.items[lastItemIndex].username === currentUser ) {
-                    %> <% if (itemIndex === lastItemIndex) { %>
+                    %> <% if (itemIndex === activity.items[lastItemIndex].username.length) { %>
                     <span class=""></span>
                     <% } else { %>
-                    <span
-                      class="timeline-bar border-end border-dashed border-300"
-                    ></span>
+                    <span class="timeline-bar border-end border-dashed border-300"></span>
                     <% } %> <% } %>
                   </div>
                 </div>
@@ -149,7 +120,7 @@
                   <div class="d-flex justify-content-between">
                     <div class="d-flex mb-2">
                       <h6 class="lh-sm mb-0 me-2 text-800 timeline-item-title">
-                        <%= itemArray.title %> 
+                        <%= itemArray.title %>
                       </h6>
                     </div>
                     <p class="text-500 fs--1 mb-0 text-nowrap timeline-time">
