--- a/views/duty-handover-submit.ejs
+++ b/views/duty-handover-submit.ejs
@@ -47,7 +47,7 @@
                 <!-- form >form tag will be merge with file uploader form tag -->
                 <form action="/duty-handover/submit" method="post" class="row g-3 has-validation" id="reportForm">
                   <!-- form title report -->
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <label class="form-label" for="giveShift">Shift</label>
                     <% if(shift === ''){
                             shift = 'Choose a shift'
@@ -64,30 +64,7 @@
                     <div class="invalid-feedback">Please select a shift.</div>
                   </div>
 
-                  <div class="col-md-6">
-                    <label class="form-label" for="handoverLocation">Location</label>
-                    <% if(location === ''){
-                            location = 'Choose a location'
-                        } %>
-                    <select class="form-select <%= validationLocation %>" id="handoverLocation" name="location">
-                      <option selected="" value="<%= location %>">
-                        <%= location %>
-                      </option>
-                      <option value="Baitul Makmur I">Baitul Makmur I</option>
-                      <option value="Baitul Makmur II">Baitul Makmur II</option>
-                      <option value="Jamek Mosque">Jamek Mosque</option>
-                      <option value="City Mosque">City Mosque</option>
-                      <option value="Raudhatul Sakinah">
-                        Raudhatul Sakinah
-                      </option>
-                    </select>
-                    <div class="valid-feedback">Looks good!</div>
-                    <div class="invalid-feedback">
-                      Please select a title report.
-                    </div>
-                  </div>
-
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <label class="form-label" for="giveHeadShift">Head of Shift</label>
 
                     <input class="form-control <%= validationHeadShift %>" id="giveHeadShift" type="text" name="headShift" value="<%= headShift %>" />
@@ -96,7 +73,7 @@
                     </div>
                   </div>
 
-                  <div class="col-md-6">
+                  <div class="col-md-4">
                     <label class="form-label" for="giveStaffAbsent">Staff Absent</label>
 
                     <input class="form-control <%= validationStaffAbsent %>" id="giveStaffAbsent" type="text" name="staffAbsent" value="<%= staffAbsent %>" />
@@ -105,7 +82,7 @@
                     </div>
                   </div>
 
-                  <div class="col-12 gy-4 mb-3">
+                  <div class="col-12 gy-4 mt-0 mb-3">
                     <label class="form-label" for="giveNotes">Summary</label>
                     <textarea class="form-control <%= validationNotes %> scrollbar-overlay" id="giveNotes" placeholder="Leave a summary here" style="height: 100px" name="notes">
 <%= notes %></textarea>
@@ -120,7 +97,7 @@
                     <div id="selectedNames" class="d-flex flex-wrap border border-300 rounded-3 px-2" style="min-height: 2.5rem"></div>
                   </div>
 
-                  <div class="col-md-12">
+                  <div class="col-md-12 mt-0">
                     <div class="row">
                       <div class="col-6">
                         <label class="form-label" for="validationCustom03">Search Staff Name</label>
