--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -391,7 +391,8 @@ if(role === 'Admin'){
                     label: {
                       show: true,
                       position: 'outside',
-                      formatter: '{b}: {d}%', // Display the name and percentage value outside the doughnut
+                      formatter: '{b}: {d}%',
+                      color: '#3874ff' // Display the name and percentage value outside the doughnut
                     },
                     emphasis: {
                       label: {
