Edited cahrt on shift member

--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -382,6 +382,7 @@ if(role === 'Admin'){
                     textStyle: {
                       color: '#3874ff', // Change font color to #3874ff
                     },
+                    show : false
                   },
                   series: [{
                     name: 'Percentage',
