Fix on case report part submit and details regarding the upload case report submission

--- a/views/case-report-submit.ejs
+++ b/views/case-report-submit.ejs
@@ -336,7 +336,7 @@
           class="dropzone dropzone-multiple p-0 mb-4"
           id="myDropzone"
           data-dropzone="data-dropzone"
-          action="/upload-patrol"
+          action="/upload-case"
           data-options='{"url":"/upload-case","paramName": "file"}'
         >
           <div class="dz-message" data-dz-message="data-dz-message">
